deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: escape-the-castle
  labels:
    app.kubernetes.io/name: escape-the-castle
